FIX: -Fixed search form to proerly have the elements aligned

--- a/space-explorer/src/Components/ImageSearchForm/ImageSearchForm.module.scss
+++ b/space-explorer/src/Components/ImageSearchForm/ImageSearchForm.module.scss
@@ -35,7 +35,8 @@ form {
     align-items: center;
     gap: 0.8rem;
     flex-wrap: wrap;
-    width: clamp(320px, 40%, 750px);
+    width: 100%;
+    align-content: center;
 
     label {
         font-size: 1.8rem;
@@ -48,8 +49,15 @@ form {
         background-color: #00000096;
         padding: 0.5rem;
         border-radius: 10px;
+        &:hover {
+            cursor: url(/pointer.png), auto;
+        }
+        svg {
+            color: var(--about-text-collor);
+            font-size: 3rem;
+        }
     }
-    span {
+    .main-element {
         display: flex;
         gap: 1.2rem;
         position: relative;
@@ -61,20 +69,14 @@ form {
         ::placeholder {
             padding: 0.1rem;
         }
-        svg {
-            position: absolute;
-            left: 5px;
-            top: 7px;
-            z-index: 1;
-        }
         .form-input {
-            width: clamp(320px, 20%, 505px);
+            width: clamp(250px, 100%, 505px);
             font-size: 1.4rem;
             color: var(--card-box-shadow-color-hover);
             border: none;
             border-radius: 10px;
             border-bottom: 1px solid var(--about-text-collor);
-            padding: 0.2rem 0 0.2rem 2rem;
+            padding: 0.4rem;
             background: var(--component-bgr-transparent-color);
             backdrop-filter: blur(5px);
             transition: box-shadow 200ms ease-in-out;
@@ -95,9 +97,9 @@ form {
                 background-color: rgba(94, 255, 0, 0.185);
             }
         }
-        input[type="submit"] {
-            @include button();
-        }
+    }
+    input[type="submit"] {
+        @include button();
     }
 }
 @media screen and (max-width: 766px) {
